Dev_mythip@capgemini.com_17Dec_ForGitSync/src/objects/Objective__c.object
<CustomObject>
    <fields>
        <fullName>ENT_Type__c</fullName>
        <label>ENT Type</label>
        <picklist>
            <picklistValues>
                <fullName>test</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Number__c</fullName>
        <label>Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Qrtly_Revenue_Growth__c</fullName>
        <label>Qrtly Revenue Growth</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <label>Objective</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>OB-{00000}</displayFormat>
        <label>Objective Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Objectives</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>